--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hello world</title>
     <style>
+        :root {
+            --color-primary: azure;
+        }
         body {
             margin: 0;
             padding: 0;
@@ -15,16 +18,35 @@
             justify-content: center;
             align-items: center;
             height: 100vh;  
+            text-align: center;
+        }
+        
+        h1, a {
+            color: var(--color-primary);
         }
         h1 {
             font-size: 10vw;
-            color:azure;
+            padding: 0;
+            margin: 0;
         }
+        a {
+            text-decoration: none;
+            &:hover {
+                text-decoration: underline;
+            }
+            &#email {
+                font-size: 4vw;
+            }
+        }
+
     </style>
 </head>
 <body>
     <main>
-        <h1>hello world!</h1>
+        <div>
+            <h1>hello world!</h1>
+            <a href="mailto:antonio.molinari@laba.edu" id="email">Contact me</a>
+        </div>
     </main>
 </body>
 </html>
