wating message and color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: #00c;
+            background-color: #090;
         }
         main {
             display: flex;
@@ -24,7 +24,7 @@
 </head>
 <body>
     <main>
-        <h1>hello world!</h1>
+        <h1>i'm arriving...</h1>
     </main>
 </body>
 </html>
